syntax = "proto3";

package user;

option go_package = "./proto/";

service UserService {
  rpc ValidateUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  bool is_valid = 1;
}
